# edge

./: .env.example  .gitignore  NOTICE.md  PRIVACY.md  README.md  pubspec.yaml
android/: build.gradle.kts
app/: README.md  WHOOP_BLE_PROTOCOL.md
backend/: README.md  database.py  main.py
docs/: index.html  notice.html  privacy.html  style.css  terms.html
guides/: AI_COACH.md  BUZZ_MEANINGS.md  IOS_INSTALLATION.md  IOS_SIDELOAD.md  TASKER_INTEGRATION.md
ios/: BreathingLiveActivityBridge.swift  LiveActivityBridge.swift  Podfile
lib/: app.dart  config.dart  firebase_options.dart  main.dart  theme.dart
lib/data/: db.dart  (+4 more)
research/: README.md  WHOOP_BLE_PROTOCOL.md  whoop.py
rust/: Cargo.toml
rust/src/: lib.rs
test/: ai_breakdown_widget_test.dart  ai_briefing_test.dart  ai_reminder_plan_test.dart  alarm_test.dart  band_ownership_test.dart  ble_engine_test.dart  ble_state_test.dart  boot_splash_test.dart  call_buzzer_test.dart  calm_breathing_view_test.dart  coach_claude_sampling_test.dart  coach_sql_guard_test.dart  coach_views_test.dart  core_screens_test.dart  crossday_pipeline_test.dart  day_label_test.dart  day_nav_test.dart  day_strain_steps_source_test.dart  db_integrity_test.dart  derivation_pipeline_test.dart  derivation_scope_test.dart  derive_concurrency_test.dart  derive_prepare_test.dart  design_redesign_test.dart  design_system_test.dart  device_label_test.dart  fake_route_fixture_test.dart  flow_screens_redesign_test.dart  get_sessions_merge_test.dart  headless_gate_test.dart  high_freq_wake_window_test.dart  history_screens_redesign_test.dart  (+35 more)
(+266 files in other folders)
